Harden native DNS response validation